--- a/public/less/overlay.less
+++ b/public/less/overlay.less
@@ -7,9 +7,14 @@
 	bottom: 0;
 	z-index: 200;
 	opacity: 1;
+	overflow-y: scroll;
 	visibility: hidden;
 	pointer-events: none;
 	.transition(background 0.16s ease-out);
+
+	.overlay-view-container {
+		padding: 32px 0;
+	}
 
 	& > div {
 		opacity: 1;
