--- a/public/less/pages/managePolls.less
+++ b/public/less/pages/managePolls.less
@@ -1,13 +1,13 @@
 .overlay-container.expand .manage-polls-view {
 	opacity: 1;
-	-webkit-transform: translate3d(0, -10px, 0) scale(1, 1);
-			transform: translate3d(0, -10px, 0) scale(1, 1);
+	-webkit-transform: translate3d(0, 0, 0) scale(1, 1);
+			transform: translate3d(0, 0, 0) scale(1, 1);
 }
 
 .manage-polls-view {
 	opacity: 0;
-	-webkit-transform: translate3d(0, 0, 0) scale(0.96, 0.96);
-			transform: translate3d(0, 0, 0) scale(0.96, 0.96);
+	-webkit-transform: translate3d(0, -10px, 0) scale(0.96, 0.96);
+			transform: translate3d(0, -10px, 0) scale(0.96, 0.96);
 	transition: transform 0.24s ease-out, opacity 0.24s ease-out;
 	-webkit-transition: -webkit-transform 0.24s ease-out, opacity 0.24s ease-out;
 
